robot-shop/route.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      service: web
    name: web
    namespace: robot-shop
  spec:
    port:
      targetPort: 8080
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: web
      weight: 100
    wildcardPolicy: None
